# data_science_labs_

./: .gitignore  README (2).md  README.md
LAB7/Lab7_Face/: Lab7_Face.sln
LAB7/Lab7_Face/x64/Debug/: build.sh
Lab5/: app.py
lab2/: Part1 (1).ipynb  part2 (1).ipynb  requirements.txt
lab3/: Lab3.ipynb  README.md
lab4/: LAB4.ipynb  README.md
lab_06/: CMakeLists.txt  README1_1.md  build.sh  preinstall.sh  run.sh
lab_06/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab_06/src/: CameraProvider.cpp  CameraProvider.cpp.save  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
