cmake_minimum_required(VERSION 3.10)
project(OpenCV_Lab6)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenCV REQUIRED)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(Lab6Executable ${SOURCES})
target_link_libraries(Lab6Executable ${OpenCV_LIBS})
